# rainbow-is-all-you-need

./: .all-contributorsrc  .flake8  .gitattributes  .gitignore  .isort.cfg  .mise.toml  .pre-commit-config.yaml  .pylintrc  01.dqn.ipynb  01_dqn.py  02.double_q.ipynb  02_double_q.py  03.per.ipynb  03_per.py  04.dueling.ipynb  04_dueling.py  05.noisy_net.ipynb  05_noisy_net.py  06.categorical_dqn.ipynb  06_categorical_dqn.py  07.n_step_learning.ipynb  07.n_step_td.ipynb  07_n_step_learning.py  08.rainbow.ipynb  08_rainbow.py  09_rainbow_iqn.py  11.curiosity.ipynb  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  render.py  requirements-dev.txt  requirements.txt  segment_tree.py
__marimo__/session/: 01_dqn.py.json  02_double_q.py.json  03_per.py.json  04_dueling.py.json  05_noisy_net.py.json  06_categorical_dqn.py.json  07_n_step_learning.py.json  08_rainbow.py.json  09_rainbow_iqn.py.json
